--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div class="video-responsive">
-        <iframe src="https://www.youtube.com/watch?v=dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
+        <!-- <iframe src="https://www.youtube.com/embed/DLzxrzFCyOs" width="533" height="300" frameborder="0" allowfullscreen=""></iframe>     -->
+        <video controls autoplay="true">
+            <source src="rickroll.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video> 
     </div>
 </body>
 </html>
